Bug 99262 - DFG structure check hoisting should attempt to ignore side effects and make transformations that are sound even in their presence
Summary: DFG structure check hoisting should attempt to ignore side effects and make t...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Filip Pizlo
URL:
Keywords:
Depends on:
Blocks: 98606 99260
  Show dependency treegraph
 
Reported: 2012-10-13 23:10 PDT by Filip Pizlo
Modified: 2012-10-14 13:23 PDT (History)
6 users (show)

See Also:


Attachments
work in progress (11.51 KB, patch)
2012-10-14 00:33 PDT, Filip Pizlo
no flags Details | Formatted Diff | Diff
the patch (12.05 KB, patch)
2012-10-14 12:37 PDT, Filip Pizlo
oliver: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Filip Pizlo 2012-10-13 23:10:48 PDT
This will simplify the phase and enable hoisting of effectful structure and array checks.
Comment 1 Filip Pizlo 2012-10-14 00:33:43 PDT
Created attachment 168577 [details]
work in progress

Still investigating performance issues.
Comment 2 Filip Pizlo 2012-10-14 12:37:07 PDT
Created attachment 168587 [details]
the patch
Comment 3 Filip Pizlo 2012-10-14 13:23:37 PDT
Landed in http://trac.webkit.org/changeset/131270